Bug 1800202 - Close db after use in nsMsgDBFolder::ReadDBFolderInfo(). r=benc

This is run from discoverFolders() at startup and can cause MSF loss if too many folders are left open.

Differential Revision: https://phabricator.services.mozilla.com/D162521

--HG--
extra : rebase_source : ad78f749f8370878bfe75f22248974515a031132