mailnews/base/src/nsMsgDBFolder.cpp
@@ -642,6 +642,7 @@ nsresult nsMsgDBFolder::ReadDBFolderInfo(bool force) {
   if (force || !mInitializedFromCache) {
     nsCOMPtr<nsIDBFolderInfo> folderInfo;
     nsCOMPtr<nsIMsgDatabase> db;
+    bool weOpenedDB = !mDatabase;
     result =
         GetDBFolderInfoAndDB(getter_AddRefs(folderInfo), getter_AddRefs(db));
     if (NS_SUCCEEDED(result)) {
@@ -676,6 +677,7 @@ nsresult nsMsgDBFolder::ReadDBFolderInfo(bool force) {
           rv = db->HasNew(&hasnew);
           if (NS_FAILED(rv)) return rv;
         }
+        if (weOpenedDB) CloseDBIfFolderNotOpen(false);
       }
     } else {
       // we tried to open DB but failed - don't keep trying.
